# logistics-or-gym

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
logistics_or_gym/: __init__.py
logistics_or_gym/envs/: HCVRP.py  HeterogeneousCVRP.py  __init__.py
routing/envs/: HCVRP.py  __init__.py
tests/: test_hcvrp.py
training/: train.py
