[tool.poetry]
name = "logistics_or_gym"
version = "0.2.0"
description = "or-problems formulated as gym environments to solve logisitcal-problems"
authors = ["hadisdev <hadi.salameh@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HublyGroup/logistics-or-gym"
repository = "https://github.com/HublyGroup/logistics-or-gym"
keywords = ["logistics-or-gym", "or", "gym", "logistics", "logistics-or", "or-gym"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
numpy = "~1.23.2"
gymnasium = "^0.26.3"
torch = {version = "*", source = "torch"}
torch_geometric = "*"
pyg_lib = {version = "*", source = "pyg"}
torch_scatter = {version = "*", source = "pyg"}
torch_sparse = {version = "*", source = "pyg"}
#torch_cluster = {version = "*", source = "pyg"}
torch_spline_conv= {version = "*", source = "pyg"}
setuptools = "^67.8.0"
ray = {extras = ["rllib"], version = ">=2.6.3,<4"}
sympy = "^1.12"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.0.1+cu118.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
