[tool.poetry]
name = "logistics_or_gym"
version = "0.2.0"
description = "or-problems formulated as gym environments to solve logisitcal-problems"
authors = ["hadisdev <hadi.salameh@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HublyGroup/logistics-or-gym"
repository = "https://github.com/HublyGroup/logistics-or-gym"
keywords = ["logistics-or-gym", "or", "gym", "logistics", "logistics-or", "or-gym"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
numpy = ">=1.25.2,<2"
gymnasium = ">=0.29.1, <1"
setuptools = "^68.1.2"


[tool.poetry.dev-dependencies]
pytest = ">=7.4.1, <8"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
